@@ -5,3 +5,5 @@ Sans argument, affiche cette aide.
 Sous la forme "knowledge list", affiche tous les éléments connus, avec leur numéro. Un paramètre supplémentaire permet de restreindre l'affichage à un certain type. Utiliser un type invalide liste les types valides.
 
 Sous la forme "knowledge show <numéro>", affiche les détails de l'élément spécifié.
+
+Sous la forme "knowledge search <texte>", affiche les éléments ayant <texte> dans leur résumé ou détail.
