@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add 'knowledge search <text>' to filter knowledge.
+Nicolas Weeger 2010-07-14
+
 Remove unused parameters.
 Nicolas Weeger 2010-07-14
 
